shorten Network to Net, prevent value line wrapping

--- a/assets/css/blocks/hardware.css
+++ b/assets/css/blocks/hardware.css
@@ -60,6 +60,7 @@
   display: flex;
   justify-content: space-between;
   align-items: baseline;
+  white-space: nowrap;
 }
 
 .hardware-label {
